--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "firebase": "^7.7.0",
     "mongoose": "^5.4.10"
   },
   "devDependencies": {},
